--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 ### Node ###
+#######use .gitignore generator online tool for generating this file 
+##easy and handyyyyyyyyyyyyyyyyyyy
+
 # Logs
 logs
 *.log
